<resources>
    <string name="app_name">BookStore</string>
    <string name="Ad_menu">Admin Menu</string>
    <string name="login">Login</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="signup">Signup</string>
    <string name="orders">Orders</string>
    <string name="bill">Bill</string>
    <string name="orders_list">Orders List</string>
    <string name="back">Back</string>
    <string name="admin_order_list">Admin Order List</string>
    <string name="book_details">Book Details</string>
    <string name="ok">Ok</string>
    <string name="company_name">Company Name</string>
    <string name="commission">Commission</string>
    <string name="admin_signup">Admin Signup</string>
    <string name="submit">Submit</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="reset">Reset</string>
    <string name="confirm_pwd">Confirm Pwd</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin_login">Admin Login</string>
    <string name="user_id">User Id</string>
    <string name="login1">Login1</string>
    <string name="cancel">Cancel</string>
    <string name="received_orders">Received Orders</string>
    <string name="placed_orders">Placed Orders</string>
    <string name="stock_of_books">Stock Of Books</string>
    <string name="date_of_placement_of_order">Date Of Placement Of Order</string>
    <string name="placed_order_date">Placed Order Date</string>
    <string name="user_details">User Details</string>
    <string name="standard">Standard</string>
    <string name="bill_details">Bill Details</string>
    <string name="book_1">Book 1</string>
    <string name="book_4">Book 4</string>
    <string name="book_3">Book 3</string>
    <string name="book_2">Book 2</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="cart">Cart</string>
    <string name="user_login">User Login</string>
    <string name="user">User</string>
    <string name="signup1">SignUp1</string>
    <string name="selected_books">Selected Books</string>
    <string name="placed_order">Placed Order</string>
    <string name="user_signup">User SignUp</string>
    <string name="order">Order</string>
    <string name="confirm">confirm</string>
    <string name="name">name</string>
    <string name="delivery_address">delivery_address</string>
</resources>
